TheMightyDude (29 August 2012)
--------------------------------------
Added strlen and gettype functionality to Smarty.

TheKabal (25 August 2012)
--------------------------------------
Passwords are now salted & stored using bcrypt
Split combat and IGB into seperate function files
Cleaned up many CamelCaps and ALLCAPS function names
All authentication now uses sessions instead of cookies
check_login now performs both the checking of login/authentication, but also updates the session (like update_cookie used to do)
Main menu now includes an admin menu link if you are logged in with the adminmail account
Main menu now includes a clickable link for score, which allows a player to trigger the function
connect_database is now only called from common
global $db is now only called inside connect_database

TheKabal (18 August 2012)
--------------------------------------
Config.php is now config/configset_classic.ini.php
Config variables are loaded into and from the database
Files now include global_includes, instead of config.php

TheMightyDude (18 August 2012)
--------------------------------------
Fixed Notice: Use of undefined constant LOG_ADMIN_PLANETCHEAT - assumed 'LOG_ADMIN_PLANETCHEAT' in planet_report_ce.php

TheMightyDude (15 August 2012)
--------------------------------------
Fixed Notice: Use of undefined constant dev_escapepod - assumed 'dev_escapepod' in combat.php
Fixed Notice: Undefined index: loggedin, last_run in footer.php
Updated perfmon.php to allow the clicking on its links.

TheMightyDude (13 August 2012)
--------------------------------------
Added the Template API to support both Smarty Templates (HTML) and XML DOM (External Clients when added)

TheMightyDude (11 August 2012)
--------------------------------------
Added the Smarty Template Backend.
Added new include functions.

TheMightyDude (07 August 2012)
--------------------------------------